--- a/assets/style.css
+++ b/assets/style.css
@@ -22,50 +22,53 @@ header {
 
 main {
     background-image: url(./img/cork.png);
-    box-shadow: black;
+    height: 10000px;
 
 
-    #row_container {
+
+    #row {
         padding-left: 270px;
         padding-top: 50px;
         padding-right: 270px;
 
-
-        .cards {
-            display: flex;
-            flex-direction: column;
-            background-color: white;
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-top: 20px;
+        .col {
 
 
+            .cards {
+                position: relative;
+                width: 300px;
+                background-color: white;
+                box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.5);
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 20px;
+                padding-bottom: 20px;
 
+                svg {
+                    position: absolute;
+                    transform: translateX(-50%) translateY(-50%);
+                    left: 50%;
+                    top: 1%;
+                }
 
-            img {
-                width: 260px;
-                height: 260px;
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                }
 
+                p {
+                    color: gray;
+                    font-size: 13px;
+                    font-family: "Sometype Mono", monospace;
+                    margin-top: 10px;
 
+                }
+
+                h3 {
+                    font-size: 24px;
+                    font-family: "Edu Tas Beginner", sans-serif;
+                }
             }
-
-
-
-
-            p {
-                display: flex;
-                font-family: "Sometype Mono", monospace;
-            }
-
-            h3 {
-                display: flex;
-                font-family: "Edu Tas Beginner", sans-serif;
-            }
-
-
-
-
         }
-
     }
 }
