--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,6 @@ header {
     padding-top: 20px;
     padding-bottom: 20px;
 
-
     #titolo {
         font-size: 70px;
         font-family: "Edu Tas Beginner", sans-serif;
@@ -19,54 +18,69 @@ header {
 }
 
 
-
 main {
     background-image: url(./img/cork.png);
-    height: 10000px;
-
 
 
     #row {
-        padding-left: 270px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         padding-top: 50px;
-        padding-right: 270px;
+        padding-bottom: 50px;
+        padding-left: 250px;
+        padding-right: 250px;
 
         .col {
-
+            display: flex;
+            width: calc(100% / 12 * 4);
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 20px;
+            padding-bottom: 20px;
 
             .cards {
                 position: relative;
-                width: 300px;
-                background-color: white;
-                box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.5);
-                padding-left: 20px;
-                padding-right: 20px;
-                padding-top: 20px;
-                padding-bottom: 20px;
 
-                svg {
-                    position: absolute;
-                    transform: translateX(-50%) translateY(-50%);
-                    left: 50%;
-                    top: 1%;
+                .card_top {
+                    background-color: white;
+                    padding-top: 20px;
+                    padding-left: 20px;
+                    padding-right: 20px;
+
+                    svg {
+                        position: absolute;
+                        transform: translateX(-50%) translateY(-50%);
+                        left: 50%;
+                        top: 1%;
+
+                    }
+
+                    img {
+
+
+                        max-width: 100%;
+                        max-height: 100%;
+                    }
                 }
 
-                img {
-                    max-width: 100%;
-                    max-height: 100%;
-                }
+                .card_buttom {
+                    background-color: white;
+                    padding-left: 20px;
+                    padding-bottom: 20px;
 
-                p {
-                    color: gray;
-                    font-size: 13px;
-                    font-family: "Sometype Mono", monospace;
-                    margin-top: 10px;
+                    p {
+                        color: gray;
+                        font-size: 13px;
+                        font-family: "Sometype Mono", monospace;
+                        padding-top: 10px;
 
-                }
+                    }
 
-                h3 {
-                    font-size: 24px;
-                    font-family: "Edu Tas Beginner", sans-serif;
+                    h3 {
+                        font-size: 24px;
+                        font-family: "Edu Tas Beginner", sans-serif;
+                    }
                 }
             }
         }
