--- a/assets/style.css
+++ b/assets/style.css
@@ -17,16 +17,13 @@ header {
     }
 }
 
-
 main {
     background-image: url(./img/cork.png);
 
-
     #row {
         display: flex;
-        justify-content: center;
         flex-wrap: wrap;
-        padding-top: 50px;
+        padding-top: 30px;
         padding-bottom: 50px;
         padding-left: 250px;
         padding-right: 250px;
@@ -41,6 +38,7 @@ main {
 
             .cards {
                 position: relative;
+                box-shadow: 3px 3px 6px 2px rgba(0, 0, 3, 0.48);
 
                 .card_top {
                     background-color: white;
@@ -53,14 +51,10 @@ main {
                         transform: translateX(-50%) translateY(-50%);
                         left: 50%;
                         top: 1%;
-
                     }
 
                     img {
-
-
                         max-width: 100%;
-                        max-height: 100%;
                     }
                 }
 
