--- a/assets/style.css
+++ b/assets/style.css
@@ -3,77 +3,92 @@
     box-sizing: border-box;
 }
 
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(./img/wall.png);
-    padding-top: 20px;
-    padding-bottom: 20px;
 
-    #titolo {
-        font-size: 70px;
-        font-family: "Edu Tas Beginner", sans-serif;
-    }
-}
+#overlay {
+    position: fixed;
+    background-color: rgba(0, 0, 3, 0.596);
+    min-height: 100vh;
+    width: 100%;
+    z-index: +100;
 
-main {
-    background-image: url(./img/cork.png);
 
-    #row {
+
+
+
+    header {
+
         display: flex;
-        flex-wrap: wrap;
-        padding-top: 30px;
-        padding-bottom: 50px;
-        padding-left: 250px;
-        padding-right: 250px;
+        justify-content: center;
+        align-items: center;
+        background-image: url(./img/wall.png);
+        padding-top: 20px;
+        padding-bottom: 20px;
 
-        .col {
+        #titolo {
+            font-size: 70px;
+            font-family: "Edu Tas Beginner", sans-serif;
+        }
+    }
+
+    main {
+        background-image: url(./img/cork.png);
+
+
+        #row {
             display: flex;
-            width: calc(100% / 12 * 4);
-            padding-left: 20px;
-            padding-right: 20px;
-            padding-top: 20px;
-            padding-bottom: 20px;
+            flex-wrap: wrap;
+            padding-top: 30px;
+            padding-bottom: 50px;
+            padding-left: 250px;
+            padding-right: 250px;
 
-            .cards {
-                position: relative;
-                box-shadow: 3px 3px 6px 2px rgba(0, 0, 3, 0.48);
+            .col {
+                display: flex;
+                width: calc(100% / 12 * 4);
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 20px;
+                padding-bottom: 20px;
 
-                .card_top {
-                    background-color: white;
-                    padding-top: 20px;
-                    padding-left: 20px;
-                    padding-right: 20px;
+                .cards {
+                    position: relative;
+                    box-shadow: 3px 3px 6px 2px rgba(0, 0, 3, 0.48);
 
-                    svg {
-                        position: absolute;
-                        transform: translateX(-50%) translateY(-50%);
-                        left: 50%;
-                        top: 1%;
+                    .card_top {
+                        background-color: white;
+                        padding-top: 20px;
+                        padding-left: 20px;
+                        padding-right: 20px;
+
+                        svg {
+                            position: absolute;
+                            transform: translateX(-50%) translateY(-50%);
+                            left: 50%;
+                            top: 1%;
+                        }
+
+                        img {
+                            max-width: 100%;
+                        }
                     }
 
-                    img {
-                        max-width: 100%;
-                    }
-                }
+                    .card_buttom {
+                        background-color: white;
+                        padding-left: 20px;
+                        padding-bottom: 20px;
 
-                .card_buttom {
-                    background-color: white;
-                    padding-left: 20px;
-                    padding-bottom: 20px;
+                        p {
+                            color: gray;
+                            font-size: 13px;
+                            font-family: "Sometype Mono", monospace;
+                            padding-top: 10px;
 
-                    p {
-                        color: gray;
-                        font-size: 13px;
-                        font-family: "Sometype Mono", monospace;
-                        padding-top: 10px;
+                        }
 
-                    }
-
-                    h3 {
-                        font-size: 24px;
-                        font-family: "Edu Tas Beginner", sans-serif;
+                        h3 {
+                            font-size: 24px;
+                            font-family: "Edu Tas Beginner", sans-serif;
+                        }
                     }
                 }
             }
